force-app/main/default/objects/SCMImpToolsPO_Stage__c/SCMImpToolsPO_Stage__c.object-meta.xml
<CustomObject>
    <description>Staging table to load open purchase orders.</description>
    <label>PO Stage</label>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>PO Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Stage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>