force-app/main/default/objects/SCMImpToolsPO_Stage__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Error message if there is an issue loading the data</inlineHelpText>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>