force-app/main/default/objects/SCMImpToolsPO_Stage__c/fields/Existing_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Existing_PO_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The PO number that is being migrated</inlineHelpText>
    <label>Existing PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>