force-app/main/default/objects/SCMImpToolsPO_Stage__c/fields/Existing_SO_Number__c.field-meta.xml
<CustomField>
    <fullName>Existing_SO_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The existing SO number that is associated with the PO.</inlineHelpText>
    <label>Existing SO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>