force-app/main/default/objects/SCMImpToolsPO_Stage__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Item being procurred</inlineHelpText>
    <label>Item</label>
    <length>32</length>
    <type>Text</type>
</CustomField>