force-app/main/default/objects/SCMImpToolsPO_Stage__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Ownership Code for items</inlineHelpText>
    <label>Ownership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>