force-app/main/default/objects/SCMImpToolsPO_Stage__c/fields/PO_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date of the original PO</inlineHelpText>
    <label>PO Date</label>
    <type>Date</type>
</CustomField>