force-app/main/default/objects/SCMImpToolsPO_Stage__c/fields/Procured_For__c.field-meta.xml
<CustomField>
    <fullName>Procured_For__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer the goods are procured for.</inlineHelpText>
    <label>Procured For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>