force-app/main/default/objects/SCMImpToolsPO_Stage__c/fields/Ship_to_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Warehouse__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The warehouse the goods are being shipped to</inlineHelpText>
    <label>Ship to Warehouse</label>
    <length>50</length>
    <type>Text</type>
</CustomField>