force-app/main/default/objects/SCMImpToolsPO_Stage__c/fields/Ship_Via__c.field-meta.xml
<CustomField>
    <fullName>Ship_Via__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ship Via</label>
    <length>100</length>
    <type>Text</type>
</CustomField>