force-app/main/default/objects/SCMImpToolsPO_Stage__c/fields/Shipping_Addressee__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Addressee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Shipping Addressee for the purchase order</inlineHelpText>
    <label>Shipping Addressee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>