force-app/main/default/objects/SCMImpToolsPO_Stage__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The supplier for the PO</inlineHelpText>
    <label>Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>