force-app/main/default/objects/SCMImpToolsPO_Stage__c/fields/Supplier_Commitment_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Commitment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date supplier committed to delivering</inlineHelpText>
    <label>Supplier Commitment Date</label>
    <type>Date</type>
</CustomField>