force-app/main/default/objects/SCMImpToolsPO_Stage__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    <inlineHelpText>Unit cost of the item being procurred</inlineHelpText>
    <label>Unit Cost</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>