force-app/main/default/objects/SCMImpToolsPO_Stage__c/listViews/All_not_Loaded.listView-meta.xml
<ListView>
    <fullName>All_not_Loaded</fullName>
    <columns>NAME</columns>
    <columns>Loaded__c</columns>
    <columns>Error__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Item__c</columns>
    <columns>Supplier__c</columns>
    <columns>Existing_PO_Number__c</columns>
    <columns>PO_Date__c</columns>
    <columns>Ship_to_Warehouse__c</columns>
    <columns>Ship_Via__c</columns>
    <columns>Supplier_Commitment_Date__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loaded__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All not Loaded</label>
</ListView>